update something new

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,1 +1,64 @@
-<p>forgot-password works!</p>
+<div
+  class="w-full h-full overflow-auto flex flex-col items-center py-20 px-4 bg-gray-50"
+>
+  <div
+    class="w-full max-w-md rounded-md sm:shadow sm:bg-white sm:px-9 sm:py-12"
+  >
+    <div class="mb-4 flex">
+      <button type="button" class="text-gray-400" (click)="back()">
+        <mat-icon>arrow_back</mat-icon>
+      </button>
+    </div>
+
+    <ng-container *ngIf="!isSent">
+      <div class="font-medium text-gray-900 text-2xl text-center">
+        Quên mật khẩu
+      </div>
+      <div class="mt-6">
+        <p class="text-gray-500 text-base mb-8">
+          {{ "Hệ thống sẽ gửi một đường link để đặt lại mật khẩu vào email" }}
+          <span class="font-semibold text-gray-600"
+            >nguyenchinhhiep95@gmail.com</span
+          >
+        </p>
+
+        <app-button
+          [type]="'button'"
+          [variant]="'primary'"
+          [classes]="'w-full'"
+          [disabled]="loading"
+          (clicked)="sendReset()"
+        >
+          Đặt lại mật khẩu</app-button
+        >
+      </div>
+    </ng-container>
+
+    <ng-container *ngIf="isSent">
+      <div class="flex justify-center mb-4">
+        <mat-icon class="text-success icon-size-24">check_circle</mat-icon>
+      </div>
+
+      <div class="font-medium text-gray-900 text-2xl text-center">
+        Gửi thành công
+      </div>
+      <div class="mt-6">
+        <p class="text-gray-500 text-base mb-8">
+          {{
+            "Một đường link đặt lại mật khẩu đã được gửi đến email, vui lòng kiểm tra hộp thư đến của bạn."
+          }}
+        </p>
+
+        <app-button
+          [type]="'button'"
+          [variant]="'primary'"
+          [classes]="'w-full'"
+          [disabled]="loading"
+          (clicked)="sendReset()"
+        >
+          Quay lại đăng nhập</app-button
+        >
+      </div>
+    </ng-container>
+  </div>
+</div>
