--- a/src/styles/scss/components/inputs/_input.scss
+++ b/src/styles/scss/components/inputs/_input.scss
@@ -1,1 +1,55 @@
-
+.form__input {
+   @apply w-full text-base px-3 py-2 border-2 border-solid border-gray-300 rounded-md text-gray-700 bg-white appearance-none outline-none  font-normal overflow-hidden overflow-ellipsis caret-primary;
+   min-height: 48px;
+ 
+   &:focus {
+     @apply border-primary ring-primary-300 ring-1;
+   }
+ 
+   &::placeholder {
+     @apply text-gray-400;
+   }
+ 
+   &:disabled {
+     @apply opacity-60;
+   }
+ 
+   // States
+   &.ng-invalid.ng-touched,
+   &.ng-invalid.ng-dirty {
+     @apply border-danger caret-danger ring-danger-300;
+   }
+ }
+ 
+ // Input group
+ .input-group {
+   @apply relative flex w-full border-2 border-solid border-gray-300 rounded overflow-hidden;
+ 
+   > .form__input {  
+     @apply flex-grow min-w-0 border-0 rounded-none;
+     min-height: 44px;
+ 
+     &:focus {
+       @apply ring-0;
+     }
+   }
+ 
+   &:focus-within {
+     @apply border-primary ring-primary-300 ring-1;
+   }
+ 
+   // States
+   &.input-group--focus {
+     @apply border-primary ring-primary-300 ring-1;
+   }
+ 
+   &.invalid {
+     @apply border-danger caret-danger ring-danger-300;
+   }
+ }
+ 
+ // Input prefix & input suffix
+ .input__prefix,
+ .input__suffix {
+   @apply flex justify-center items-center p-2 bg-white;
+ }
