--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,12 +1,12 @@
 <div
-  class="w-full h-full overflow-auto flex flex-col items-center py-20 px-4 bg-gray-50"
+  class="w-full min-h-full flex flex-col items-center py-20 px-4 bg-gray-100"
 >
   <div
-    class="w-full max-w-md rounded-md sm:shadow sm:bg-white sm:px-9 sm:py-12"
+    class="w-full max-w-md rounded-md sm:shadow-base sm:bg-white sm:px-9 sm:py-12"
   >
     <div class="mb-4 flex">
       <button type="button" class="text-gray-400" (click)="back()">
-        <mat-icon>arrow_back</mat-icon>
+        <mat-icon class="icon-size-7">arrow_back</mat-icon>
       </button>
     </div>
 
@@ -17,7 +17,7 @@
       <div class="mt-6">
         <p class="text-gray-500 text-base mb-8">
           {{ "Hệ thống sẽ gửi một đường link để đặt lại mật khẩu vào email" }}
-          <span class="font-semibold text-gray-600"
+          <span class="font-medium text-gray-800"
             >nguyenchinhhiep95@gmail.com</span
           >
         </p>
@@ -39,7 +39,7 @@
         <mat-icon class="text-success icon-size-24">check_circle</mat-icon>
       </div>
 
-      <div class="font-medium text-gray-900 text-2xl text-center">
+      <div class="font-medium text-gray-800 text-2xl text-center">
         Gửi thành công
       </div>
       <div class="mt-6">
