--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,12 +1,12 @@
 <div
-  class="w-full h-full overflow-auto flex flex-col items-center py-20 px-4 bg-gray-50"
+  class="w-full min-h-full flex flex-col items-center py-20 px-4 bg-gray-100"
 >
   <div
-    class="w-full max-w-md min-h-[500px] rounded-md sm:shadow sm:bg-white sm:px-9 sm:py-12"
+    class="w-full max-w-md min-h-[500px] rounded-md sm:shadow-base sm:bg-white sm:px-9 sm:py-12"
   >
     <div class="mb-4 flex">
       <button type="button" class="text-gray-400" (click)="back()">
-        <mat-icon>arrow_back</mat-icon>
+        <mat-icon class="icon-size-7">arrow_back</mat-icon>
       </button>
     </div>
     <div class="font-medium text-gray-900 text-2xl text-center">
@@ -148,10 +148,14 @@
         </ng-container>
       </div>
       <div class="form__field">
-        <app-checkbox formControlName="agreements">
-          Khi đăng kí bạn phải đồng ý với <a>điều khoản dịch vụ</a> và
-          <a>chính sách bảo mật</a> của chúng tôi
-        </app-checkbox>
+        <div class="flex items-start">
+          <input id="agreements" type="checkbox" formControlName="agreements" />
+
+          <label for="agreements" class="ml-2">
+            Khi đăng kí bạn phải đồng ý với <a>điều khoản dịch vụ</a> và
+            <a>chính sách bảo mật</a> của chúng tôi</label
+          >
+        </div>
         <ng-container
           *ngIf="
             this.form.get('agreements')?.invalid &&
