--- a/src/styles/scss/components/__components-dir.scss
+++ b/src/styles/scss/components/__components-dir.scss
@@ -6,4 +6,4 @@ This file is used to contain all components imports.
 @import "./tables";
 @import "./dropdown";
 // Form
-@import "./inputs/_inputs";
+@import "./form/_form";
