update something new

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -2,11 +2,14 @@
   class="w-full min-h-full flex flex-col items-center py-20 px-4 bg-gray-100"
 >
   <div
-    class="w-full max-w-md rounded-md sm:shadow-base sm:bg-white sm:px-9 sm:py-12"
+    class="w-full max-w-md min-h-[500px] rounded-md sm:shadow-base sm:bg-white sm:px-9 sm:py-12"
   >
     <div class="mb-4 flex">
       <button type="button" class="text-gray-400" (click)="back()">
-        <mat-icon class="icon-size-7">arrow_back</mat-icon>
+        <mat-icon
+          class="icon-size-7"
+          [svgIcon]="'mat_outline:arrow_back'"
+        ></mat-icon>
       </button>
     </div>
 
@@ -36,7 +39,10 @@
 
     <ng-container *ngIf="isSent">
       <div class="flex justify-center mb-4">
-        <mat-icon class="text-success icon-size-24">check_circle</mat-icon>
+        <mat-icon
+          class="text-success icon-size-24"
+          [svgIcon]="'mat_outline:check_circle'"
+        ></mat-icon>
       </div>
 
       <div class="font-medium text-gray-800 text-2xl text-center">
