--- a/src/styles/scss/components/__components-dir.scss
+++ b/src/styles/scss/components/__components-dir.scss
@@ -1,9 +1,9 @@
 /*
 This file is used to contain all components imports.
 */
+@import "./forms/_forms-dir";
+
 @import "./buttons";
 @import "./dialog";
 @import "./tables";
 @import "./dropdown";
-// Form
-@import "./form/_form";
