--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -6,7 +6,10 @@
   >
     <div class="mb-4 flex">
       <button type="button" class="text-gray-400" (click)="back()">
-        <mat-icon class="icon-size-7">arrow_back</mat-icon>
+        <mat-icon
+          class="icon-size-7"
+          [svgIcon]="'mat_outline:arrow_back'"
+        ></mat-icon>
       </button>
     </div>
     <div class="font-medium text-gray-900 text-2xl text-center">
@@ -52,12 +55,13 @@
                 : (passwordField.type = 'password')
             "
           >
-            <mat-icon>
-              {{
-                passwordField.type === "password"
-                  ? "visibility"
-                  : "visibility_off"
-              }}
+            <mat-icon
+              [svgIcon]="
+                passwordField.type === 'password'
+                  ? 'mat_outline:visibility'
+                  : 'mat_outline:visibility_off'
+              "
+            >
             </mat-icon>
           </button>
         </div>
@@ -115,12 +119,13 @@
                 : (confirmPasswordField.type = 'password')
             "
           >
-            <mat-icon>
-              {{
-                confirmPasswordField.type === "password"
-                  ? "visibility"
-                  : "visibility_off"
-              }}
+            <mat-icon
+              [svgIcon]="
+                confirmPasswordField.type === 'password'
+                  ? 'mat_outline:visibility'
+                  : 'mat_outline:visibility_off'
+              "
+            >
             </mat-icon>
           </button>
         </div>
