update something new

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,181 +1,60 @@
-<div class="w-full min-h-full flex flex-col items-center py-20 px-4">
+<div
+  class="w-full min-h-full flex flex-col items-center py-20 px-4 bg-gray-100"
+>
   <div
-    class="w-full max-w-md min-h-[500px] rounded-md sm:shadow-base sm:px-9 sm:py-12"
+    class="w-full max-w-md min-h-[500px] rounded-md sm:shadow-base sm:px-9 sm:py-12 bg-white"
   >
-    <div class="font-medium text-gray-900 text-2xl text-center mb-2">
-      Login to your account
-    </div>
-
-    <!-- <ng-container *ngIf="this.form.get('emailFound')?.value">
-      <div class="mb-4 flex">
-        <button type="button" class="text-gray-400" (click)="reset()">
-          <mat-icon
-            class="icon-size-7"
-            [svgIcon]="'mat_outline:arrow_back'"
-          ></mat-icon>
-        </button>
-      </div>
-      <div class="font-medium text-gray-900 text-2xl text-center mb-2">
-        Đăng nhập
-      </div>
-      <div
-        class="text-center flex justify-center items-center overflow-hidden sm:px-6"
-      >
-        <div class="text-gray-400">
-          Vui lòng nhập mật khẩu cho tài khoản
-          <span class="text-gray-800 font-medium">{{
-            this.form.get("email")?.value
-          }}</span>
-        </div>
-      </div>
-    </ng-container> -->
+    <div class="font-semibold text-gray-900 text-2xl mb-2">Login</div>
 
     <form class="mt-8" [formGroup]="form" (ngSubmit)="submit()">
-      <div class="form__field">
-        <label for="email" class="form__label">Email</label>
+      <mat-form-field appearance="fill" class="w-full">
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="email" />
+        <mat-error>This field is required</mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill" class="w-full">
+        <mat-label>Password</mat-label>
         <input
-          id="email"
-          type="text"
-          class="form__input"
-          placeholder="Enter your email"
-          formControlName="email"
+          id="password"
+          matInput
+          type="password"
+          formControlName="password"
+          #passwordField
         />
-        <ng-container
-          *ngIf="
-            this.form.get('email')?.invalid &&
-            (this.form.get('email')?.touched || this.form.get('email')?.dirty)
+        <button
+          mat-icon-button
+          type="button"
+          (click)="
+            passwordField.type === 'password'
+              ? (passwordField.type = 'text')
+              : (passwordField.type = 'password')
           "
+          matSuffix
         >
-          <div
-            *ngIf="this.form.get('email')?.hasError('required')"
-            class="form__feedback error"
-          >
-            This field is required.
-          </div>
-          <div
-            *ngIf="this.form.get('email')?.hasError('email')"
-            class="form__feedback error"
-          >
-            Invalid email
-          </div>
-        </ng-container>
-      </div>
-
-      <div class="form__field !mb-2">
-        <label class="form__label" for="password">Password</label>
-        <div
-          class="input-group"
-          [ngClass]="
-            this.form.get('password')?.invalid &&
-            (this.form.get('password')?.touched ||
-              this.form.get('password')?.dirty)
-              ? 'invalid'
-              : ''
-          "
-        >
-          <input
-            id="password"
-            type="password"
-            class="form__input"
-            placeholder="Enter your password"
-            formControlName="password"
-            #password
-          />
-          <button
-            type="button"
-            class="input__suffix text-gray-400"
-            (click)="
-              password.type === 'password'
-                ? (password.type = 'text')
-                : (password.type = 'password')
-            "
-          >
-            <mat-icon
-              [svgIcon]="
-                password.type === 'password'
-                  ? 'mat_outline:visibility'
-                  : 'mat_outline:visibility_off'
-              "
-            >
-            </mat-icon>
-          </button>
-        </div>
-
-        <ng-container
-          *ngIf="
-            this.form.get('password')?.invalid &&
-            (this.form.get('password')?.touched ||
-              this.form.get('password')?.dirty)
-          "
-        >
-          <div
-            *ngIf="this.form.get('password')?.hasError('required')"
-            class="form__feedback error"
-          >
-            This field is required.
-          </div>
-        </ng-container>
-      </div>
-      <div class="text-right mb-6">
+          <mat-icon
+            class="icon-size-5"
+            *ngIf="passwordField.type === 'password'"
+            [svgIcon]="'mat_outline:visibility'"
+          ></mat-icon>
+          <mat-icon
+            class="icon-size-5"
+            *ngIf="passwordField.type === 'text'"
+            [svgIcon]="'mat_outline:visibility_off'"
+          ></mat-icon>
+        </button>
+        <mat-error> Password is required </mat-error>
+      </mat-form-field>
+      <div class="text-right">
         <a routerLink="/forgot-password">Forgot password?</a>
       </div>
-
-      <app-button
-        [type]="'submit'"
-        [variant]="'primary'"
-        [classes]="'w-full'"
-        [disabled]="loading"
+      <button
+        class="w-full mt-6 btn--lg"
+        mat-flat-button
+        [color]="'primary'"
       >
         Login
-      </app-button>
-
-      <ng-container *ngIf="!this.form.get('emailFound')?.value">
-        <div class="flex items-center my-6">
-          <div class="flex-grow h-[1px] bg-gray-200"></div>
-          <div class="px-4 text-xs uppercase text-gray-400">Or</div>
-          <div class="flex-grow h-[1px] bg-gray-200"></div>
-        </div>
-        <div class="flex flex-col gap-4">
-          <app-button [variant]="'outline-secondary'" [classes]="'w-full'">
-            <svg
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M20.061 12.381c0-.557-.045-1.117-.141-1.664h-7.728v3.154h4.426a3.792 3.792 0 01-1.638 2.49v2.047h2.64c1.55-1.427 2.441-3.534 2.441-6.027z"
-                fill="#5384EC"
-              ></path>
-              <path
-                d="M12.193 20.386c2.21 0 4.073-.726 5.43-1.978l-2.64-2.047c-.734.5-1.683.783-2.787.783-2.138 0-3.95-1.442-4.6-3.38H4.872v2.11a8.194 8.194 0 007.32 4.512z"
-                fill="#35A753"
-              ></path>
-              <path
-                d="M7.593 13.763a4.907 4.907 0 010-3.137v-2.11H4.87a8.2 8.2 0 000 7.357l2.722-2.11z"
-                fill="#FBBB07"
-              ></path>
-              <path
-                d="M12.193 7.243a4.452 4.452 0 013.143 1.228l2.338-2.34a7.874 7.874 0 00-5.481-2.13 8.191 8.191 0 00-7.321 4.515l2.72 2.11c.648-1.941 2.463-3.383 4.6-3.383z"
-                fill="#EB4334"
-              ></path>
-            </svg>
-            Login with Google
-          </app-button>
-          <app-button [variant]="'outline-secondary'" [classes]="'w-full'">
-            <svg
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-            >
-              <path
-                d="M20 10c0-5.52-4.48-10-10-10S0 4.48 0 10c0 4.84 3.44 8.87 8 9.8V13H6v-3h2V7.5C8 5.57 9.57 4 11.5 4H14v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"
-                fill="#007AF8"
-              ></path>
-            </svg>
-            Login with Facebook
-          </app-button>
-        </div>
-      </ng-container>
+      </button>
     </form>
   </div>
 </div>
